Drop delivery driver from orders table